✨ feat(构建项目框架): 初始化

--- a/gadmin-framework/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/gadmin-framework/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,1 +1,9 @@
-{ "properties": [ ] }
+{
+  "properties": [
+    {
+      "name": "mine-config.check-login.exclude",
+      "type": "java.lang.String",
+      "description": "Description for mine-config.check-login.exclude."
+    }
+  ]
+}
