:pencil2: feat(更改基础系统模块):
添加了config模块接口层，所有的接口均从此处进行实现

--- a/gadmin-framework/src/main/resources/application.yml
+++ b/gadmin-framework/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   profiles:
     active: dev
   application:
-    name: MyAdmin
+    name: GAdmin
 
 # 日志
 logging:
   level:
-    cn.daenx.myadmin: info
-    org.springframework: warn
+    com.org: info
+    org.springframework: info
   config: classpath:logback.xml
 
 
