--- a/gadmin-common/gamin-utility/pom.xml
+++ b/gadmin-common/gamin-utility/pom.xml
@@ -10,12 +10,20 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>gadmin-exception</artifactId>
+    <artifactId>gamin-utility</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.org</groupId>
+            <artifactId>gadmin-config</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
